2000-06-28  Jeffrey Stedfast  <fejj@helixcode.com>

	* message-list.c: Added prototype for filter_date to make
	it build cleanly

2000-06-27  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Made dates display grouping information
	properly.

2000-06-27  Peter Williams  <peterw@curious-george.helixcode.com>

	* message-list.c (mark_msg_seen): Need to return a value
	on error.

	* main.c (main): Don't start threads or enter threads if
	there's no threading! Sigh.

	* test-thread.c: Don't compile if no threads.

	* session.c: Work without broken threads.

	* message-list.c (filter_date): Solve the ctime_r problem the
	correct way, with the magic of autoconf.

2000-06-27  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Work around mismatched ctime_r functions.  This
	will be fixed.

2000-06-27  Peter Williams  <peterw@curious-george.helixcode.com>

	* mail-threads.c: Don't compile this if we don't have
	threads enabled. This should maybe be on the Makefile.am
	level.

2000-06-27  Michael Zucchi  <zucchi@zedzone.mmc.com.au>

	* component-factory.c (owner_set_cb): Put in a gross hack to
	export the shell reference elsewhere.

2000-06-26  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Added a value_to_string handler.

2000-06-26  Peter Williams  <peterw@helixcode.com>

	* component-factory.c, mail-ops.c: #ifdef the threads stuff so
	that if USE_BROKEN_THREADS is not defined we just call the functions
	in the main thread.

	* mail-threads.h: Don't declare funcs if USE_BROKEN_THREADS not
	defined.

	* mail-threads.c: Put the query and message boxes on top so that
	you can see them.

2000-06-26  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c (error_dialog): va_start() returns void, don't
	assign it's retval to a variable.

2000-06-26  Ettore Perazzoli  <ettore@helixcode.com>

	* main.c (main): Call `GDK_THREADS_ENTER()' and
	`GDK_THREADS_LEAVE()' around the main loop as in the examples from
	the GTK+ FAQ.